syntax = "proto3";
package com.example.grpc;

message HelloRequest {
  string name = 1;
  repeated string hobbies = 2;
}

message HelloResponse {
  string greeting = 1;
}

message GetRandomTaskRequest {
}

message GetRandomTaskResponse {
  string title = 1;
}

service GreetingService {
  rpc greeting(HelloRequest) returns (HelloResponse);
  rpc getRandomTask(GetRandomTaskRequest) returns (GetRandomTaskResponse);
}
